--- a/style.css
+++ b/style.css
@@ -58,15 +58,15 @@ body {
     display: flex; 
     flex-direction: column; 
     overflow: hidden; 
-    height: 38px;
+    height: 40px;
     align-items: center;
     justify-content: center;
 }
 .logo-main { 
-    height: 80px; 
-    width: auto; 
+    height: auto; 
+    width: 120px; 
     display: block; 
-    margin-top: 26px; 
+    margin-top: 28px; 
     object-fit: contain;
     flex-shrink: 0;
 }
